fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__ignore_input.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "_",
            ],
            value: Function {
                name: "input",
                args: [],
            },
        },
    ],
}
