fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__many_io_lists.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "a",
                "b",
                "c",
                "d",
                "e",
                "f",
            ],
            value: Function {
                name: "input",
                args: [
                    "g",
                    "h",
                    "i",
                    "j",
                    "k",
                ],
            },
        },
        Assignment {
            vars: [
                "l",
                "m",
                "n",
                "o",
            ],
            value: Function {
                name: "go",
                args: [
                    "p",
                    "q",
                    "r",
                    "s",
                    "t",
                ],
            },
        },
        Assignment {
            vars: [
                "u",
                "v",
            ],
            value: Function {
                name: "stop",
                args: [
                    "w",
                    "x",
                    "y",
                    "z",
                ],
            },
        },
    ],
}
