fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__missing_arguments.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.msg()
---
expected OpenParen but found Semicolon
