fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__missing_assign_operator.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.to_string()
---
expected = but found input
