fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__missing_semicolon_with_more_after.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.msg()
---
expected Semicolon but found Id("y")
