fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__missing_value.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.msg()
---
expected Id("<id>") but found Semicolon
