fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__no_args.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x",
            ],
            value: Function {
                name: "input",
                args: [],
            },
        },
    ],
}
