fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__single_assignment.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x",
            ],
            value: Op {
                name: "input",
                args: [
                    "y",
                ],
            },
        },
    ],
}
