fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__spaces_in_id.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x lkjsdf - \\\" \"",
            ],
            value: Op {
                name: "cool ids",
                args: [],
            },
        },
    ],
}
