fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__total_gibberish.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.msg()
---
found !, expected '_' or alphabetic character
